# GRSFramework

./: .clang-format  .gitconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MathJaxTest.md  README.md  ReadMe.txt  _config.yml  activate  clang-formatAll.sh  flake.nix  index.html  justfile  package.json  params.json  test.htm  videoContent.html  videoSubtitle.md
SourceCode/Projects/PythonCTest/: CMakeLists.txt
SourceCode/Projects/PythonCTest/Projects/CWrapperTest/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/: .gitignore  CMakeCache.txt  CMakeLists.txt  SetBoostBOOST_ROOT.bat  SetEIGENVars - Copy.bat  SetOGREVars.bat  SetOgreBinPath.bat  SimulationFramework.kdev4
SourceCode/Projects/SimulationFramework/CommonSource/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/Projects/Converter/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/Projects/GeneralRigidBodySimulation/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/Projects/GeneralRigidBodySimulationMPI/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/Projects/GeneralRigidBodySimulationNoGUI/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/Projects/SimFileConverter/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/doc/: .clang_format
SourceCode/Projects/SimulationFramework/projects/converter/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/projects/generalRigidBodySimulationMPI/: CMakeLists.txt
SourceCode/Projects/SimulationFramework/simulations/: ImportantChangesForSimulationJobs.txt  InitVariables.sh  LOG  OpenSrcFiles.sh  ReplaceIncludeGuards.sh  ReplaceIncludes.sh  SceneFile-P-15-9Crash.xml  SceneFileAvalanche1M-RunDownTrees2.2.xml  SceneFileAvalancheRunDown.xml  SceneFileAvalancheRunDownTest.xml  SceneFileAvalancheRunDownTrees.xml  SceneFileCriticalTest.xml  SceneFileDriftTest.xml  SceneFileFunnel.xml  SceneFileRemoteRemoteTest.xml  SceneFileTest.xml  SceneFileTestFlatAvalanche.xml  SceneFileTestFlatAvalancheSimple.xml  SceneFileTestGravityCheck.xml  SceneFileTestMPI.xml  SceneFileTestNoG2x2x1.xml  SceneFileTestNoG2x2x2_400.xml  SceneFileTestNoG3x3x3-40000.xml  SceneFileTestNoG3x3x3-7500.xml  SceneFileTestNoG3x3x3-7500_Test.xml  SceneFileValidate.xml  copySimulations.sh  ogre.cfg  plugins.cfg
SourceCode/Projects/SimulationFramework/simulations/python/: ComputeOpsCombinatorics.ipynb  DetermineStartVolume.ipynb  FStreamResultsPlot.ipynb  LuxRenderTest.ipynb  ParseDatabase.ipynb  ParseXML.ipynb  PyhtonNumpyTestBench.ipynb  ReplaceInlcudes.ipynb  SimFilePlotTest7500.ipynb  SimFilePlotter.ipynb  SimFilePlotterCompare.ipynb  SimFilePlotterMPI.ipynb
SourceCode/Projects/SimulationFramework/simulations/sceneFileValidation/: CommonTypes.xsd  Geometries.xsd  SceneFile.xsd
projects/converter/: CMakeLists.txt
projects/converter/include/GRSF/common/: ApplicationCLOptionsConverter.hpp  LogDefines.hpp  TypeDefs.hpp
projects/converter/include/GRSF/converters/: SimFileConverter.hpp
projects/converter/include/GRSF/general/: LogicParser.hpp  LogicParserBaseTraits.hpp  LogicParserBaseTraitsMacro.hpp  LogicParserModules.hpp  LogicParserTraits.hpp  LogicParserTraitsMacro.hpp  SimFileExecutionGraph.hpp  SimFileExecutionGraphNodes.hpp
projects/converter/include/GRSF/logic/: LogicTypes.hpp
projects/converter/src/GRSF/app/: main.cpp
projects/converter/src/GRSF/common/: TypeDefs.cpp
projects/converter/src/GRSF/converters/: LogicConverter.icc
projects/converter/src/GRSF/general/: SimFileExecutionGraph.cpp
projects/granularRigidBodySimulationGUI/: CMakeLists.txt
projects/granularRigidBodySimulationGUI/include/GRSF/: DoxygenModules.hpp
projects/granularRigidBodySimulationGUI/include/GRSF/app/: App.hpp  MenuMouse.hpp  OrbitCamera.hpp
projects/granularRigidBodySimulationGUI/include/GRSF/common/: AssertionDebug.hpp  Asserts.hpp  AxisObject.hpp  CommonFunctionsOgre.hpp  DynamicCoordinateFrames.hpp  DynamicLines.hpp  DynamicRenderable.hpp  Line3D.h  LogDefines.hpp  OgreMeshExtraction.hpp  OgrePointCloud.hpp  OgreSceneManagerDeleter.hpp  TypeDefs.hpp
projects/granularRigidBodySimulationGUI/include/GRSF/configFiles/: ConfigureFile.hpp.in
projects/granularRigidBodySimulationGUI/include/GRSF/states/: AppState.hpp  AppStateManager.hpp  PlaybackState.hpp  SimulationState.hpp  VideoDropper.hpp
projects/granularRigidBodySimulationGUI/include/GRSF/systems/: SceneParserGUI.hpp
projects/granularRigidBodySimulationGUI/resources/debug/: plugins.cfg
projects/granularRigidBodySimulationGUI/resources/debug/unix/: plugins.cfg
projects/granularRigidBodySimulationGUI/resources/install/: resources.cfg
projects/granularRigidBodySimulationGUI/resources/release/unix/: plugins.cfg
projects/granularRigidBodySimulationGUI/src/GRSF/app/: App.cpp  MenuMouse.cpp  OrbitCamera.cpp  main.cpp
projects/granularRigidBodySimulationGUI/src/GRSF/common/: AxisObject.cpp  CommonFunctionsOgre.cpp  DynamicLines.cpp  DynamicRenderable.cpp  Line3D.cpp  OgreMeshExtraction.cpp  OgrePointCloud.cpp  TypeDefs.cpp
projects/granularRigidBodySimulationGUI/src/GRSF/states/: AppStateManager.cpp  PlaybackState.cpp  SimulationState.cpp
projects/granularRigidBodySimulationMPI/: CMakeLists.txt
projects/granularRigidBodySimulationMPI/include/GRSF/common/: AssertionDebug.hpp  Asserts.hpp  LogDefines.hpp  MortonKey.hpp  RedirectOutput.hpp  TypeDefs.hpp
projects/granularRigidBodySimulationMPI/include/GRSF/configFiles/: ConfigureFile.hpp.in
projects/granularRigidBodySimulationMPI/include/GRSF/singeltons/: MPIGlobalCommunicators.hpp
projects/granularRigidBodySimulationMPI/include/GRSF/systems/: SceneParserMPI.hpp  SceneParserModulesCreatorTB.hpp  SceneParserModulesMPI.hpp
projects/granularRigidBodySimulationMPI/src/GRSF/app/: main.cpp
tests/MPITest/: CMakeLists.txt
tests/MPITest/Projects/MpiTests/: CMakeLists.txt
tests/MPITest/Projects/MpiTests/inc/: AssertionDebug.hpp  Asserts.hpp  (+31 more)
tests/MPITest/Projects/PNetCDFTests/: CMakeLists.txt
tests/TestBench/H5File/: CMakeLists.txt
tests/TestBench/H5File/src/: main.cpp
tests/TestBench/Projects/Test/: CMakeLists.txt
(+12731 files in other folders)
